"Fix": Estilização do scrollbar

--- a/src/style.scss
+++ b/src/style.scss
@@ -8,7 +8,7 @@
 
   html, body {
     height: 100%;
-    margin: 0;
+    margin: 0 10px 10px 10px;
     padding: 0;
     overflow: hidden;
   }
